--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
   "name": "f5-angular",
-  "version": "1.0.0",
-  "description": "f5 angular workshop",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/alonronin/f5-angular.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/alonronin/f5-angular/issues"
-  },
-  "homepage": "https://github.com/alonronin/f5-angular#readme"
+  "dependencies": {
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0"
+  }
 }
