--- a/package.json
+++ b/package.json
@@ -3,14 +3,24 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "webpack": "webpack --watch"
   },
   "dependencies": {
+    "angular": "^1.4.3",
+    "angular-resource": "^1.4.3",
     "body-parser": "~1.13.2",
+    "bootstrap": "^3.3.5",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "jquery": "^2.1.4",
+    "lodash": "^3.10.1",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "ui-router": "0.0.1"
+  },
+  "devDependencies": {
+    "webpack": "^1.10.5"
   }
 }
