--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "angular": "^1.4.3",
     "angular-resource": "^1.4.3",
+    "angular-ui-router": "^0.2.15",
     "body-parser": "~1.13.2",
     "bootstrap": "^3.3.5",
     "cookie-parser": "~1.3.5",
@@ -16,10 +17,8 @@
     "express": "~4.13.1",
     "jquery": "^2.1.4",
     "lodash": "^3.10.1",
-    "metismenu": "^2.1.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-    "ui-router": "0.0.1"
+    "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
     "webpack": "^1.10.5"
